Closed
Bug 507402
Opened 15 years ago
Closed 15 years ago
Flash plugin mispositioned when scrolling
Categories
(Core Graveyard :: Plug-ins, defect, P1)
Tracking
(status1.9.2 beta1-fixed)
RESOLVED
FIXED
Tracking | Status | |
---|---|---|
status1.9.2 | --- | beta1-fixed |
People
(Reporter: sylvain.pasche, Assigned: roc)
References
Details
(Keywords: regression, testcase)
Attachments
(3 files, 1 obsolete file)
456 bytes,
text/html
|
Details | |
237 bytes,
text/html
|
Details | |
1.72 KB,
patch
|
jimm
:
review+
benjamin
:
approval1.9.2+
|
Details | Diff | Splinter Review |
When scrolling with the wheel or up/down keys, flash plugin element sometimes doesn't scroll and appears above the surrounding text. That's a regression from bug 505896.
See testcase, I couldn't reproduce the issue with the test plugin.
Flags: blocking1.9.2?
Assignee | ||
Updated•15 years ago
|
Assignee: nobody → roc
Assignee | ||
Updated•15 years ago
|
Flags: blocking1.9.2? → blocking1.9.2+
Assignee | ||
Comment 1•15 years ago
|
||
I can reproduce this reliably by loading this slightly modified testcase and pressing page-down then page-up --- the plugin is gone. I've removed the inner DIVs, this is really simple.
Assignee | ||
Comment 2•15 years ago
|
||
This fixes it. Because ConfigureChildren has short-circuit paths now that depend on the widget's mBounds being correct, we need to update mBounds to account for the effects of ScrollWindowEx before we call ConfigureChildren.
Attachment #393094 -
Flags: review?(jmathies)
Assignee | ||
Comment 3•15 years ago
|
||
I'm not sure why the test plugin isn't affected by this. With wmode=window, it should be affected, but doesn't seem to be. But even if it was, we can't really write a test here, since the widget's mBounds always looks correct, the bug is that the HWND ends up in the wrong position.
Assignee | ||
Updated•15 years ago
|
Whiteboard: [needs review]
Updated•15 years ago
|
Attachment #393094 -
Flags: review?(jmathies) → review+
Assignee | ||
Comment 4•15 years ago
|
||
This patch isn't right since we iterate over the children in aConfigurations but not other children we may have. It's also not right because ScrollWindowEx is supposed to send WM_MOVE messages to the child windows which should be updating our mBounds, so this patch shouldn't even be necessary.
Assignee | ||
Comment 5•15 years ago
|
||
Ah, but plugin window messages don't go through nsWindow::WindowProc. So that code never gets called...
Assignee | ||
Comment 6•15 years ago
|
||
Sorry Jim, this patch makes more sense.
Attachment #393094 -
Attachment is obsolete: true
Attachment #393974 -
Flags: review?(jmathies)
Updated•15 years ago
|
Attachment #393974 -
Flags: review?(jmathies) → review+
Comment 9•15 years ago
|
||
This looks like its fixed, see testcase in bug 511816.
Assignee | ||
Comment 10•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: [needs review]
Assignee | ||
Comment 11•15 years ago
|
||
Assignee | ||
Updated•15 years ago
|
Attachment #393974 -
Flags: approval1.9.2?
Comment 12•15 years ago
|
||
Needs a 1.9.2 branch push.
Comment 13•15 years ago
|
||
Comment on attachment 393974 [details] [diff] [review]
fix
This doesn't need approval because it's a blocker, but I'll mark it anyway!
Attachment #393974 -
Flags: approval1.9.2? → approval1.9.2+
Assignee | ||
Updated•15 years ago
|
Whiteboard: [needs 192 landing]
Updated•15 years ago
|
Priority: -- → P1
Comment 14•15 years ago
|
||
Looks like roc landed this on 1.9.2, as part of this push on 9/23:
http://hg.mozilla.org/releases/mozilla-1.9.2/pushloghtml?changeset=c46bf0f0d355
main fix: http://hg.mozilla.org/releases/mozilla-1.9.2/rev/c46bf0f0d355
bustage fix: http://hg.mozilla.org/releases/mozilla-1.9.2/rev/33c9121a6bdc
status1.9.2:
--- → beta1-fixed
Whiteboard: [needs 192 landing]
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•