Bug 507402. Update window bounds to account for SW_SCROLLCHILDREN, since plugins might not tell us about their WM_MOVE messages. r=jmathies

--HG--
extra : rebase_source : afe93b37bada5d53dfd83cf3a676acea0a65c533